--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,11 @@
+<!--
+Course: CST205-01_FA23: Multimedia Design & Progmng
+Title: Currency Exchanage Project
+Abstract: This base.html file serves as a template foundation for other HTML files in a Flask application. 
+Authors: Delight Lee
+Date: 12/11/23
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
