--- a/templates/exchangeRates.html
+++ b/templates/exchangeRates.html
@@ -1,3 +1,10 @@
+<!--
+Course: CST205-01_FA23: Multimedia Design & Progmng
+Title: Currency Exchanage Project
+Abstract: This page allows users to select a currency from a dropdown menu and view its exchange rates
+Authors: Delight Lee
+Date: 12/11/23
+-->
 {% extends 'base.html' %}
 
 {% block title %}Exchange Rates{% endblock title %}
