--- a/templates/rates.html
+++ b/templates/rates.html
@@ -1,3 +1,10 @@
+<!--
+Course: CST205-01_FA23: Multimedia Design & Progmng
+Title: Currency Exchanage Project
+Abstract: This page allows a user view exchange rates from a specific currency to other currencies and sort them.
+Authors: Delight Lee
+Date: 12/11/23
+-->
 {% extends 'base.html' %}
 
 {% block title %}Exchange Rates for {{ selected_currency }}{% endblock title %}
