--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,6 +18,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/exchangeRates">Currency Exchange Rates</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/plots">Generate Plot</a>
+                </li>
             </ul>
         </div>
     </div>
