tying up loose ends

--- a/templates/plots.html
+++ b/templates/plots.html
@@ -1,3 +1,14 @@
+<!--
+Course: CST205-01_FA23: Multimedia Design & Progmng
+Title: Currency Exchanage Project
+Abstract: User selects 2 currencies in which the exchange rate is plot in the last 30 days. 
+          Not all days have datapoints so the graph may not be smooth.
+          Disclaimer: The API only have history as an endpoint for major currencies, namely USD and EUR
+          ****Please be patient as the graph can take a while to load.****
+Author: Rakery Cheng
+Date: 12/13/23
+-->
+
 {% extends 'base.html' %}
 
 {% block title %}Select Currencies - Plots{% endblock title %}
