--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Currency Exchange</a>
+                    <a class="nav-link" href="/currencyExchange">Currency Exchange</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/countryCodes">Currency Codes and Names</a>
